# frontend/openapi.json
@@ -1,35 +1,6 @@
 {
   "components": {
     "schemas": {
-      "Body_analyze_image_api_vision_analyze_post": {
-        "properties": {
-          "file": {
-            "format": "binary",
-            "title": "File",
-            "type": "string"
-          },
-          "model_id": {
-            "title": "Model Id",
-            "type": "string"
-          },
-          "projector_id": {
-            "title": "Projector Id",
-            "type": "string"
-          },
-          "prompt": {
-            "default": "Describe the image.",
-            "title": "Prompt",
-            "type": "string"
-          }
-        },
-        "required": [
-          "file",
-          "model_id",
-          "projector_id"
-        ],
-        "title": "Body_analyze_image_api_vision_analyze_post",
-        "type": "object"
-      },
       "Body_transcribe_audio_api_transcription_transcribe_post": {
         "properties": {
           "file": {
@@ -6329,110 +6300,6 @@
         "summary": "Tts Status",
         "tags": [
           "tts"
-        ]
-      }
-    },
-    "/api/vision/analyze": {
-      "post": {
-        "operationId": "analyze_image_api_vision_analyze_post",
-        "requestBody": {
-          "content": {
-            "multipart/form-data": {
-              "schema": {
-                "$ref": "#/components/schemas/Body_analyze_image_api_vision_analyze_post"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "title": "Response Analyze Image Api Vision Analyze Post",
-                  "type": "object"
-                }
-              }
-            },
-            "description": "Successful Response"
-          },
-          "422": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
-                }
-              }
-            },
-            "description": "Validation Error"
-          }
-        },
-        "summary": "Analyze Image",
-        "tags": [
-          "vision"
-        ]
-      }
-    },
-    "/api/vision/result/{result_id}/metadata": {
-      "get": {
-        "operationId": "vision_metadata_api_vision_result__result_id__metadata_get",
-        "parameters": [
-          {
-            "in": "path",
-            "name": "result_id",
-            "required": true,
-            "schema": {
-              "title": "Result Id",
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {}
-              }
-            },
-            "description": "Successful Response"
-          },
-          "422": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
-                }
-              }
-            },
-            "description": "Validation Error"
-          }
-        },
-        "summary": "Vision Metadata",
-        "tags": [
-          "vision"
-        ]
-      }
-    },
-    "/api/vision/status": {
-      "get": {
-        "operationId": "vision_status_api_vision_status_get",
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "title": "Response Vision Status Api Vision Status Get",
-                  "type": "object"
-                }
-              }
-            },
-            "description": "Successful Response"
-          }
-        },
-        "summary": "Vision Status",
-        "tags": [
-          "vision"
         ]
       }
     },
